# Eeeeee

./: .gitignore  PKGBUILD  README.md  default.nix  flake.nix  meson.build
.github/workflows/: release.yml
debian/: changelog  control  copyright
headers/: config.h  events.h  input.h  keyboard.h  types.h  ui.h
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  copyright
src/: config.c  events.c  input.c  keyboard.c  main.c  ui.c
